# plc-peripherals

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Makefile  README.md  peripheral-ads1015.c  peripheral-ltc2309.c  peripheral-mcp23008.c  peripheral-pca9685.c
include/: detect-platform.h  expanded-gpio.h  i2c-interface.h  peripheral-ads1015.h  peripheral-ltc2309.h  peripheral-mcp23008.h  peripheral-mcp23017.h  peripheral-pca9685.h  plc-peripherals-version.h  plc-peripherals.h
src/: expanded-gpio.c  i2c-interface.c  peripheral-ads1015.c  peripheral-ltc2309.c  peripheral-mcp23008.c  peripheral-mcp23017.c  peripheral-pca9685.c  plc-peripherals-version.c
tests/: Makefile  i2c-interface.c  peripheral-ltc2309.c  peripheral-mcp23008.c  peripheral-pca9685.c  test-i2c-interface.c  test-peripheral-ltc2309.c  test-peripheral-mcp23008.c  test-peripheral-pca9685.c
